[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
crossbeam-channel = "0.5.11"
derive_more = "0.99.17"
dotenv = "0.15.0"
handlebars = { version = "5.1.1", features = ["dir_source"] }
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json", "cookies"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tokio = "1.35.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
